style: fix post spacing

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
@@ -93,10 +93,14 @@ ul.post_listing > li {
 /**
  * Post
  */
+.post,
+.post.compact {
+    display: flex;
+}
+
 .post {
     --backgroundColor: #f4f4f4;
 
-    display: flex;
     flex-flow: column nowrap;
     gap: 1rem;
 
@@ -116,17 +120,24 @@ ul.post_listing > li {
 
 /** Post Image */
 .post > .image {
-    float: left;
-    max-width: 40%;
-    margin-right: 1rem;
-
     background-color: #d9d9d9;
+}
+@media (min-width: 512px) {
+    .post > .image {
+        float: left;
+        max-width: 40%;
+        margin-right: 1rem;
+    }
 }
 .post.compact > .image {
     flex: 0 0 auto;
     aspect-ratio: 16/9;
     height: calc(3em * var(--lineHeight));
-    margin: 0;
+}
+@media (min-width: 512px) {
+    .post.compact > .image {
+        margin: 0;
+    }
 }
 
 .post > .image > a > img,
